# MAI_OOP_Burunov

./: README.md
laba_1/: 1.cpp  CMakeLists.txt  READme.md  test_1.cpp  vowel.cpp  vowel.h
laba_2/: CMakeLists.txt  README.txt  four.cpp  four.h  gtests.cpp  lab_2.cpp
laba_3/: CMakeLists.txt  Figure.h  Readme.md  Vector.cpp  Vector.h  all_tests.cpp  main.cpp  pentagon.cpp  pentagon.h  point.cpp  point.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h
laba_4/: CMakeLists.txt  Figure.h  Readme.md  Vector.h  all_tests.cpp  main.cpp  pentagon.h  point.h  rhombus.h  trapezoid.h
laba_5/: CMakeLists.txt  README.md  list.hpp  main.cpp  perfect_allocator.hpp  reserve_allocator.hpp  tests.cpp
laba_6/: CMakeLists.txt  NPC.cpp  NPC.hpp  README.md  elf.cpp  elf.hpp  factory.cpp  factory.hpp  main.cpp  observer.cpp  observer.hpp  squirrel.cpp  squirrel.hpp  tests.cpp  thug.cpp  thug.hpp
laba_7/: CMakeLists.txt  NPC.cpp  NPC.hpp  README.md  elf.cpp  elf.hpp  factory.cpp  factory.hpp  main.cpp  observer.cpp  observer.hpp  squirrel.cpp  squirrel.hpp  thug.cpp  thug.hpp
